--- a/hangman.ipynb
+++ b/hangman.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mechanical-promise",
+   "id": "hidden-slope",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,33 +108,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "advised-model",
+   "execution_count": 33,
+   "id": "unsigned-ferry",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "broken word in build scope ['e', 'h', 'f', 'e', 'h', 'v', 'e', 'h']\n",
+      "partial word in build scope:\n",
+      " ['e', '_', '_', 'e', '_', '_', 'e', '_']\n",
+      "build partial word handles e right\n",
+      "broken word in build scope ['e', 'h', 'f', 'e', 'h', 'v', 'e', 'h']\n",
+      "partial word in build scope:\n",
+      " ['e', 'h', '_', 'e', 'h', '_', 'e', 'h']\n",
+      "build partial word handles e and h right\n"
+     ]
+    }
+   ],
    "source": [
-    "def build_partial_word(word, right_so_far):\n",
-    "    partial_word = word\n",
+    "def build_partial_word(right_so_far, word):\n",
+    "    broken               = list(word)\n",
+    "    partial_word_as_list = []\n",
+    "    partial_word         = \"\"\n",
+    "    for x in broken:\n",
+    "        if x in right_so_far:\n",
+    "            partial_word_as_list.append(x)\n",
+    "        else:\n",
+    "            partial_word_as_list.append('_')\n",
+    "    for x in partial_word_as_list:\n",
+    "        partial_word += x\n",
     "    return partial_word\n",
-    "\n",
-    "\n",
-    "\n",
-    "def test_build_partial_word():\n",
-    "    word     = \"ehfehveh\" # string\n",
-    "    \n",
-    "    right_so_far = ['e']\n",
-    "    partial_word = build_partial_word(right_so_far, word)\n",
-    "    assert(partial_word == e__e__e_), \"handling e wrong\"\n",
-    "    print(\"build partial word handles e right\")\n",
-    "\n",
-    "test_build_partial_word()\n",
-    "    "
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "therapeutic-avatar",
+   "id": "casual-baseball",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +215,29 @@
    "outputs": [],
    "source": [
     "\n",
+    "\n",
     "#s.6 tests\n",
+    "\n",
+    "def test_build_partial_word():\n",
+    "    word     = \"ehfehveh\" # string\n",
+    "    \n",
+    "    right_so_far = ['e']\n",
+    "    partial_word = build_partial_word(right_so_far, word)\n",
+    "    assert(partial_word == \"e__e__e_\"), \"handling e wrong\"\n",
+    "    print(\"build partial word handles e right\")\n",
+    "    \n",
+    "    right_so_far = ['e','h']\n",
+    "    partial_word = build_partial_word(right_so_far, word)\n",
+    "    assert(partial_word == \"eh_eh_eh\"), \"handling e and/or h wrong\"\n",
+    "    print(\"build partial word handles e and h right\")\n",
+    "\n",
+    "    right_so_far = ['e','h', 'f', 'v']\n",
+    "    partial_word = build_partial_word(right_so_far, word)\n",
+    "    assert(partial_word == \"ehfehveh\"), \"handling e and/or h wrong\"\n",
+    "    print(\"build partial word handles ehfehveh right\")\n",
+    "    \n",
+    "test_build_partial_word()\n",
+    "    \n",
     "    "
    ]
   },
@@ -273,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "foreign-belief",
+   "id": "realistic-reverse",
    "metadata": {},
    "outputs": [],
    "source": []
