--- a/hangman.ipynb
+++ b/hangman.ipynb
@@ -2,16 +2,175 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "hidden-slope",
+   "execution_count": 38,
+   "id": "alien-given",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Welcome to Hangman\n",
+      "\n",
+      "\n",
+      "There are 8 stages in the Hang Man drawing.\n",
+      "The Word has 8 letters.\n",
+      "Dummy word:\t _ _ _ _ _ _ _ _  \n",
+      "\n",
+      "Choose a letter please: e\n",
+      "\n",
+      "\t***\tcorrect\t***\n",
+      "\n",
+      "you have these right so far:\n",
+      " _e_______\n",
+      "failed letters:\t \n",
+      "Choose a letter please: r\n",
+      "\n",
+      "\t***\tcorrect\t***\n",
+      "\n",
+      "you have these right so far:\n",
+      " re_______\n",
+      "failed letters:\t \n",
+      "Choose a letter please: s\n",
+      "\n",
+      "\t***\tcorrect\t***\n",
+      "\n",
+      "you have these right so far:\n",
+      " re______s\n",
+      "failed letters:\t \n",
+      "Choose a letter please: c\n",
+      "\n",
+      "\t**\tincorrect\t**\n",
+      "\n",
+      "THE GIBBET GROWS:\n",
+      "\n",
+      "    \n",
+      "    \n",
+      "    \n",
+      "    _ _\n",
+      "    \n",
+      "\n",
+      "you have these right so far:\n",
+      " re______s\n",
+      "failed letters:\t c\n",
+      "Choose a letter please: d\n",
+      "\n",
+      "\t**\tincorrect\t**\n",
+      "\n",
+      "THE GIBBET GROWS:\n",
+      "\n",
+      "     |\n",
+      "     |\n",
+      "     |    \n",
+      "     | \n",
+      "    _|_\n",
+      "    \n",
+      "\n",
+      "you have these right so far:\n",
+      " re______s\n",
+      "failed letters:\t cd\n",
+      "Choose a letter please: l\n",
+      "\n",
+      "\t***\tcorrect\t***\n",
+      "\n",
+      "you have these right so far:\n",
+      " rel_____s\n",
+      "failed letters:\t cd\n",
+      "Choose a letter please: a\n",
+      "\n",
+      "\t**\tincorrect\t**\n",
+      "\n",
+      "THE GIBBET GROWS:\n",
+      "\n",
+      "     ____\n",
+      "     |  |\n",
+      "     |\n",
+      "     |\n",
+      "     |\n",
+      "     | \n",
+      "    _|_\n",
+      "    \n",
+      "\n",
+      "you have these right so far:\n",
+      " rel_____s\n",
+      "failed letters:\t cda\n",
+      "Choose a letter please: t\n",
+      "\n",
+      "\t**\tincorrect\t**\n",
+      "\n",
+      "THE GIBBET GROWS:\n",
+      "\n",
+      "     ____\n",
+      "     |  |\n",
+      "     |  O\n",
+      "     |    \n",
+      "     |\n",
+      "     |\n",
+      "    _|_\n",
+      "    \n",
+      "\n",
+      "you have these right so far:\n",
+      " rel_____s\n",
+      "failed letters:\t cdat\n",
+      "Choose a letter please: u\n",
+      "\n",
+      "\t***\tcorrect\t***\n",
+      "\n",
+      "you have these right so far:\n",
+      " rel____us\n",
+      "failed letters:\t cdat\n",
+      "Choose a letter please: o\n",
+      "\n",
+      "\t***\tcorrect\t***\n",
+      "\n",
+      "you have these right so far:\n",
+      " rel___ous\n",
+      "failed letters:\t cdat\n",
+      "Choose a letter please: i\n",
+      "\n",
+      "\t***\tcorrect\t***\n",
+      "\n",
+      "you have these right so far:\n",
+      " reli_ious\n",
+      "failed letters:\t cdat\n",
+      "Choose a letter please: g\n",
+      "\n",
+      "\t***\tcorrect\t***\n",
+      "\n",
+      "you have these right so far:\n",
+      " religious\n",
+      "failed letters:\t cdat\n",
+      "\"\n",
+      "             In fact.. wait a minute... YOU WIN!!!#\n",
+      " \n",
+      "             Run Away!\n",
+      " \n",
+      "                   ____\n",
+      "                   |  |\n",
+      "                   |           _O_/\n",
+      "                   |          / |_            _________________\\\n",
+      "                   |          _/  |                            /\n",
+      "                  _|_ \n",
+      "  \n",
+      "  \n",
+      "  \n",
+      "  \n",
+      "              \n",
+      "Word was: religious\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
-    "Hang Man copy right K-Rizzle, Oo-La and IBru \n",
-    "Games Dev Team\n",
-    "Cailleach Computing Ltd Jun 2022\n",
+    "Hang Man \n",
+    "\n",
+    "copyright Cailleach Computing Ltd Jun 2022\n",
     "MIT license\n",
+    "\n",
+    "Games Dev Team\n",
+    "K-Rizzle, GerbilMasta and YrnBru \n",
+    "\n",
     "\"\"\"\n",
     "\n",
     "# s.0 libraries\n",
@@ -31,6 +190,7 @@
     "        words = [word[0:-1] for word in words]\n",
     "        words = [word for word in words if 4 < len(word) < 10]\n",
     "    return words\n",
+    "\n",
     "\n",
     "# s.2 model\n",
     "\n",
@@ -103,31 +263,8 @@
     "    \\n\n",
     "    GAME OVER\n",
     "    \"\"\"]\n",
-    "    return gibbets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "unsigned-ferry",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "broken word in build scope ['e', 'h', 'f', 'e', 'h', 'v', 'e', 'h']\n",
-      "partial word in build scope:\n",
-      " ['e', '_', '_', 'e', '_', '_', 'e', '_']\n",
-      "build partial word handles e right\n",
-      "broken word in build scope ['e', 'h', 'f', 'e', 'h', 'v', 'e', 'h']\n",
-      "partial word in build scope:\n",
-      " ['e', 'h', '_', 'e', 'h', '_', 'e', 'h']\n",
-      "build partial word handles e and h right\n"
-     ]
-    }
-   ],
-   "source": [
+    "    return gibbets\n",
+    "\n",
     "def build_partial_word(right_so_far, word):\n",
     "    broken               = list(word)\n",
     "    partial_word_as_list = []\n",
@@ -140,16 +277,9 @@
     "    for x in partial_word_as_list:\n",
     "        partial_word += x\n",
     "    return partial_word\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "casual-baseball",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "\n",
+    "\n",
     "# s.3 view\n",
     "\n",
     "\n",
@@ -163,7 +293,7 @@
     "#s.4 control\n",
     "\n",
     "def invite_letter():\n",
-    "    new_letter = input(\"Choose a letter please:\")\n",
+    "    new_letter = input(\"Choose a letter please: \")\n",
     "    return new_letter\n",
     "\n",
     "#s.5 blocks\n",
@@ -172,47 +302,108 @@
     "    greeting()\n",
     "    gibbets     = get_gibbets()\n",
     "    chances     = len(gibbets)\n",
-    "    print(\"There are\", chances, \"stages in the Hang Man drawing.\")\n",
+    "    print(\"\\nThere are\", chances, \"stages in the Hang Man drawing.\")\n",
     "                \n",
     "    words       = get_words()\n",
     "    word        = random.choice(words)\n",
     "    letters     = len(word)\n",
     "    print(\"The Word has\", letters, \"letters.\")\n",
     "    \n",
-    "    dummy_word  = \"_\"*letters\n",
-    "    print(\"Dummy word:\\t\", dummy_word)\n",
+    "    dummy_word  = \"_ \"*letters\n",
+    "    print(\"Dummy word:\\t\", dummy_word, \"\\n\")\n",
     "\n",
     "def game_loop(word):\n",
     "    alphabet     = get_alphabet()\n",
     "    gibbets      = get_gibbets()\n",
     "    chances      = len(gibbets)\n",
     "    \n",
-    "    wrong_so_far = 0\n",
-    "    right_so_far = []\n",
+    "    answer_chars = sorted(list(set(list(word))))\n",
+    "                    \n",
+    "    wrong_so_far    = 0\n",
+    "    right_so_far    = []\n",
+    "    failed_letters  = \"\"\n",
     "    \n",
-    "    while wrong_so_far < chances-1:\n",
+    "    player_has_won  = False\n",
+    "    \n",
+    "    while wrong_so_far < chances-1 and player_has_won == False:\n",
+    "        \n",
+    "        partial_word = build_partial_word(right_so_far, word)        \n",
+    "        partial_chars = [x for x in sorted(list(set(list(partial_word)))) if x != '_']\n",
+    "        \n",
+    "        if answer_chars != partial_chars:\n",
     "\n",
-    "        letter = invite_letter()\n",
-    "        print(\"You chose\", letter)\n",
-    "        if letter in word:\n",
-    "            print(\"correct\")\n",
-    "            right_so_far.append(letter)\n",
-    "            print(\"\"\"\n",
-    "            Right so far:\"\"\", right_so_far)\n",
-    "            partial_word = build_partial_word(right_so_far, word)\n",
-    "            \n",
+    "            letter = invite_letter()\n",
+    "\n",
+    "            if letter in word:\n",
+    "                print(\"\\n\\t***\\tcorrect\\t***\")\n",
+    "                right_so_far.append(letter)\n",
+    "\n",
+    "            else:\n",
+    "                print(\"\\n\\t**\\tincorrect\\t**\")\n",
+    "                wrong_so_far = wrong_so_far + 1\n",
+    "                failed_letters += letter\n",
+    "                print(\"\\nTHE GIBBET GROWS:\")\n",
+    "                print_gibbet(wrong_so_far)\n",
+    "                \n",
+    "            if len(right_so_far) > 0 or len(failed_letters) > 0:\n",
+    "                partial_word = build_partial_word(right_so_far, word)        \n",
+    "                partial_chars = [x for x in sorted(list(set(list(partial_word)))) if x != '_']\n",
+    "                print(\"\\nyou have these right so far:\\n\", partial_word)\n",
+    "                print(\"failed letters:\\t\", failed_letters)\n",
+    "\n",
     "        else:\n",
-    "            print(\"incorrect\")\n",
-    "            wrong_so_far = wrong_so_far + 1\n",
-    "            print_gibbet(wrong_so_far)"
+    "            player_has_won = True\n",
+    "            print(\n",
+    "             \"\"\"\"\n",
+    "             In fact.. wait a minute... YOU WIN!!!#\n",
+    " \n",
+    "             Run Away!\n",
+    " \n",
+    "                   ____\n",
+    "                   |  |\n",
+    "                   |           _O_/\n",
+    "                   |          / |_            _________________\\\\\n",
+    "                   |          _/  |                            /\n",
+    "                  _|_ \n",
+    "  \n",
+    "  \n",
+    "  \n",
+    "  \n",
+    "              \"\"\")\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "        \n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    \n",
+    "    intro()\n",
+    "    \n",
+    "    words       = get_words()\n",
+    "    word        = random.choice(words)\n",
+    "    game_loop(word)\n",
+    "    \n",
+    "    print(\"Word was:\", word)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "id": "structured-contributor",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e__e__e_\n",
+      "build partial word handles e right\n",
+      "build partial word handles e and h right\n",
+      "build partial word handles ehfehveh right\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -243,71 +434,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "subjective-notebook",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Welcome to Hangman\n",
-      "\n",
-      "There are 8 stages in the Hang Man drawing.\n",
-      "The Word has 7 letters.\n",
-      "Dummy word:\t _______\n",
-      "perhaps <class 'str'>\n",
-      "Choose a letter please:d\n",
-      "You chose d\n",
-      "incorrect\n",
-      "\n",
-      "    \n",
-      "    \n",
-      "    \n",
-      "    _ _\n",
-      "    \n",
-      "Choose a letter please:e\n",
-      "You chose e\n",
-      "correct\n",
-      "\n",
-      "            Right so far: ['e']\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "Interrupted by user",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-48fbdfc442e8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mword\u001b[0m        \u001b[0;34m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwords\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mgame_loop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-15-f39b1a8ee597>\u001b[0m in \u001b[0;36mgame_loop\u001b[0;34m(word)\u001b[0m\n\u001b[1;32m    144\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0mwrong_so_far\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mchances\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    145\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 146\u001b[0;31m         \u001b[0mletter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minvite_letter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    147\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"You chose\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mletter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    148\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mletter\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mword\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-15-f39b1a8ee597>\u001b[0m in \u001b[0;36minvite_letter\u001b[0;34m()\u001b[0m\n\u001b[1;32m    115\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    116\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0minvite_letter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 117\u001b[0;31m     \u001b[0mnew_letter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Choose a letter please:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    118\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mnew_letter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    119\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    855\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    856\u001b[0m             )\n\u001b[0;32m--> 857\u001b[0;31m         return self._input_request(str(prompt),\n\u001b[0m\u001b[1;32m    858\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    859\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    899\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    900\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 901\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    902\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    903\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
-     ]
-    }
-   ],
-   "source": [
-    "if __name__ == \"__main__\":\n",
-    "    \n",
-    "    intro() \n",
-    "    words       = get_words()\n",
-    "    word        = random.choice(words)\n",
-    "    print(word, type(word))\n",
-    "    game_loop(word)\n",
-    "    \n",
-    "    \n",
-    "        \n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "realistic-reverse",
+   "id": "smaller-coating",
    "metadata": {},
    "outputs": [],
    "source": []
