--- a/hangman.ipynb
+++ b/hangman.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "id": "alien-given",
    "metadata": {},
    "outputs": [
@@ -15,31 +15,12 @@
       "\n",
       "\n",
       "There are 8 stages in the Hang Man drawing.\n",
-      "The Word has 8 letters.\n",
-      "Dummy word:\t _ _ _ _ _ _ _ _  \n",
+      "The Word has 5 letters.\n",
+      "Dummy word:\t _ _ _ _ _  \n",
       "\n",
+      "These letters are available:\n",
+      " ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
       "Choose a letter please: e\n",
-      "\n",
-      "\t***\tcorrect\t***\n",
-      "\n",
-      "you have these right so far:\n",
-      " _e_______\n",
-      "failed letters:\t \n",
-      "Choose a letter please: r\n",
-      "\n",
-      "\t***\tcorrect\t***\n",
-      "\n",
-      "you have these right so far:\n",
-      " re_______\n",
-      "failed letters:\t \n",
-      "Choose a letter please: s\n",
-      "\n",
-      "\t***\tcorrect\t***\n",
-      "\n",
-      "you have these right so far:\n",
-      " re______s\n",
-      "failed letters:\t \n",
-      "Choose a letter please: c\n",
       "\n",
       "\t**\tincorrect\t**\n",
       "\n",
@@ -52,9 +33,11 @@
       "    \n",
       "\n",
       "you have these right so far:\n",
-      " re______s\n",
-      "failed letters:\t c\n",
-      "Choose a letter please: d\n",
+      " _____\n",
+      "failed letters:\t e\n",
+      "These letters are available:\n",
+      " ['a', 'b', 'c', 'd', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      "Choose a letter please: a\n",
       "\n",
       "\t**\tincorrect\t**\n",
       "\n",
@@ -68,16 +51,21 @@
       "    \n",
       "\n",
       "you have these right so far:\n",
-      " re______s\n",
-      "failed letters:\t cd\n",
-      "Choose a letter please: l\n",
+      " _____\n",
+      "failed letters:\t ea\n",
+      "These letters are available:\n",
+      " ['b', 'c', 'd', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      "Choose a letter please: d\n",
       "\n",
       "\t***\tcorrect\t***\n",
       "\n",
       "you have these right so far:\n",
-      " rel_____s\n",
-      "failed letters:\t cd\n",
-      "Choose a letter please: a\n",
+      " ____d\n",
+      "failed letters:\t ea\n",
+      "These letters are available:\n",
+      " ['b', 'c', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      "Choose a letter please: d\n",
+      "default choice of 'j' for reusing letters\n",
       "\n",
       "\t**\tincorrect\t**\n",
       "\n",
@@ -93,9 +81,11 @@
       "    \n",
       "\n",
       "you have these right so far:\n",
-      " rel_____s\n",
-      "failed letters:\t cda\n",
-      "Choose a letter please: t\n",
+      " ____d\n",
+      "failed letters:\t eaj\n",
+      "These letters are available:\n",
+      " ['b', 'c', 'f', 'g', 'h', 'i', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      "Choose a letter please: r\n",
       "\n",
       "\t**\tincorrect\t**\n",
       "\n",
@@ -111,53 +101,90 @@
       "    \n",
       "\n",
       "you have these right so far:\n",
-      " rel_____s\n",
-      "failed letters:\t cdat\n",
-      "Choose a letter please: u\n",
+      " ____d\n",
+      "failed letters:\t eajr\n",
+      "These letters are available:\n",
+      " ['b', 'c', 'f', 'g', 'h', 'i', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      "Choose a letter please: c\n",
+      "\n",
+      "\t**\tincorrect\t**\n",
+      "\n",
+      "THE GIBBET GROWS:\n",
+      "\n",
+      "     ____\n",
+      "     |  |\n",
+      "     |  O\n",
+      "     |  |  \n",
+      "     |\n",
+      "     |\n",
+      "    _|_\n",
+      "    \n",
+      "\n",
+      "you have these right so far:\n",
+      " ____d\n",
+      "failed letters:\t eajrc\n",
+      "These letters are available:\n",
+      " ['b', 'f', 'g', 'h', 'i', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      "Choose a letter please: s\n",
       "\n",
       "\t***\tcorrect\t***\n",
       "\n",
       "you have these right so far:\n",
-      " rel____us\n",
-      "failed letters:\t cdat\n",
+      " s___d\n",
+      "failed letters:\t eajrc\n",
+      "These letters are available:\n",
+      " ['b', 'f', 'g', 'h', 'i', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
       "Choose a letter please: o\n",
       "\n",
       "\t***\tcorrect\t***\n",
       "\n",
       "you have these right so far:\n",
-      " rel___ous\n",
-      "failed letters:\t cdat\n",
+      " so__d\n",
+      "failed letters:\t eajrc\n",
+      "These letters are available:\n",
+      " ['b', 'f', 'g', 'h', 'i', 'k', 'l', 'm', 'n', 'p', 'q', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      "Choose a letter please: l\n",
+      "\n",
+      "\t**\tincorrect\t**\n",
+      "\n",
+      "THE GIBBET GROWS:\n",
+      "\n",
+      "     ____\n",
+      "     |  |\n",
+      "     |  O\n",
+      "     | _|_  \n",
+      "     |\n",
+      "     |\n",
+      "    _|_\n",
+      "    \n",
+      "\n",
+      "you have these right so far:\n",
+      " so__d\n",
+      "failed letters:\t eajrcl\n",
+      "These letters are available:\n",
+      " ['b', 'f', 'g', 'h', 'i', 'k', 'm', 'n', 'p', 'q', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
       "Choose a letter please: i\n",
       "\n",
-      "\t***\tcorrect\t***\n",
+      "\t**\tincorrect\t**\n",
+      "\n",
+      "THE GIBBET GROWS:\n",
+      "\n",
+      "     ____\n",
+      "     |  |\n",
+      "     |  O\n",
+      "     | _|_  \n",
+      "     |  | \n",
+      "     | / \\\n",
+      "    _|_ \n",
+      "    \n",
+      "\n",
+      "    GAME OVER\n",
+      "    \n",
       "\n",
       "you have these right so far:\n",
-      " reli_ious\n",
-      "failed letters:\t cdat\n",
-      "Choose a letter please: g\n",
-      "\n",
-      "\t***\tcorrect\t***\n",
-      "\n",
-      "you have these right so far:\n",
-      " religious\n",
-      "failed letters:\t cdat\n",
-      "\"\n",
-      "             In fact.. wait a minute... YOU WIN!!!#\n",
-      " \n",
-      "             Run Away!\n",
-      " \n",
-      "                   ____\n",
-      "                   |  |\n",
-      "                   |           _O_/\n",
-      "                   |          / |_            _________________\\\n",
-      "                   |          _/  |                            /\n",
-      "                  _|_ \n",
-      "  \n",
-      "  \n",
-      "  \n",
-      "  \n",
-      "              \n",
-      "Word was: religious\n"
+      " so__d\n",
+      "failed letters:\t eajrcli\n",
+      "Word was: sound\n"
      ]
     }
    ],
@@ -169,7 +196,7 @@
     "MIT license\n",
     "\n",
     "Games Dev Team\n",
-    "K-Rizzle, GerbilMasta and YrnBru \n",
+    "K-Rizzle, G-Masta and YrnBru \n",
     "\n",
     "\"\"\"\n",
     "\n",
@@ -292,9 +319,14 @@
     "\n",
     "#s.4 control\n",
     "\n",
-    "def invite_letter():\n",
+    "def invite_letter(available):\n",
+    "    print(\"These letters are available:\\n\", available)\n",
     "    new_letter = input(\"Choose a letter please: \")\n",
-    "    return new_letter\n",
+    "    if new_letter in available:\n",
+    "        return new_letter\n",
+    "    else:\n",
+    "        print(\"default choice of \\'j\\' for reusing letters\")\n",
+    "        return 'j'\n",
     "\n",
     "#s.5 blocks\n",
     "\n",
@@ -316,12 +348,13 @@
     "    alphabet     = get_alphabet()\n",
     "    gibbets      = get_gibbets()\n",
     "    chances      = len(gibbets)\n",
-    "    \n",
+    "    alphabet     = get_alphabet()\n",
     "    answer_chars = sorted(list(set(list(word))))\n",
     "                    \n",
     "    wrong_so_far    = 0\n",
     "    right_so_far    = []\n",
     "    failed_letters  = \"\"\n",
+    "    available       = alphabet\n",
     "    \n",
     "    player_has_won  = False\n",
     "    \n",
@@ -330,9 +363,11 @@
     "        partial_word = build_partial_word(right_so_far, word)        \n",
     "        partial_chars = [x for x in sorted(list(set(list(partial_word)))) if x != '_']\n",
     "        \n",
+    "        available     = [x for x in sorted(list(set(list(available)))) if x not in partial_chars and x not in failed_letters]\n",
+    "        \n",
     "        if answer_chars != partial_chars:\n",
     "\n",
-    "            letter = invite_letter()\n",
+    "            letter = invite_letter(available)\n",
     "\n",
     "            if letter in word:\n",
     "                print(\"\\n\\t***\\tcorrect\\t***\")\n",
