kata while mildly delirious

--- a/hangman.ipynb
+++ b/hangman.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "id": "alien-given",
    "metadata": {},
    "outputs": [
@@ -15,12 +15,21 @@
       "\n",
       "\n",
       "There are 8 stages in the Hang Man drawing.\n",
-      "The Word has 5 letters.\n",
-      "Dummy word:\t _ _ _ _ _  \n",
+      "The Word has 9 letters.\n",
+      "Dummy word:\t _ _ _ _ _ _ _ _ _  \n",
       "\n",
       "These letters are available:\n",
       " ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
       "Choose a letter please: e\n",
+      "\n",
+      "\t***\tcorrect\t***\n",
+      "\n",
+      "you have these right so far:\n",
+      " _____e__e\n",
+      "failed letters:\t \n",
+      "These letters are available:\n",
+      " ['a', 'b', 'c', 'd', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      "Choose a letter please: c\n",
       "\n",
       "\t**\tincorrect\t**\n",
       "\n",
@@ -33,11 +42,20 @@
       "    \n",
       "\n",
       "you have these right so far:\n",
-      " _____\n",
-      "failed letters:\t e\n",
+      " _____e__e\n",
+      "failed letters:\t c\n",
       "These letters are available:\n",
-      " ['a', 'b', 'c', 'd', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
-      "Choose a letter please: a\n",
+      " ['a', 'b', 'd', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      "Choose a letter please: d\n",
+      "\n",
+      "\t***\tcorrect\t***\n",
+      "\n",
+      "you have these right so far:\n",
+      " _____ed_e\n",
+      "failed letters:\t c\n",
+      "These letters are available:\n",
+      " ['a', 'b', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      "Choose a letter please: s\n",
       "\n",
       "\t**\tincorrect\t**\n",
       "\n",
@@ -51,21 +69,11 @@
       "    \n",
       "\n",
       "you have these right so far:\n",
-      " _____\n",
-      "failed letters:\t ea\n",
+      " _____ed_e\n",
+      "failed letters:\t cs\n",
       "These letters are available:\n",
-      " ['b', 'c', 'd', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
-      "Choose a letter please: d\n",
-      "\n",
-      "\t***\tcorrect\t***\n",
-      "\n",
-      "you have these right so far:\n",
-      " ____d\n",
-      "failed letters:\t ea\n",
-      "These letters are available:\n",
-      " ['b', 'c', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
-      "Choose a letter please: d\n",
-      "default choice of 'j' for reusing letters\n",
+      " ['a', 'b', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      "Choose a letter please: r\n",
       "\n",
       "\t**\tincorrect\t**\n",
       "\n",
@@ -81,11 +89,11 @@
       "    \n",
       "\n",
       "you have these right so far:\n",
-      " ____d\n",
-      "failed letters:\t eaj\n",
+      " _____ed_e\n",
+      "failed letters:\t csr\n",
       "These letters are available:\n",
-      " ['b', 'c', 'f', 'g', 'h', 'i', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
-      "Choose a letter please: r\n",
+      " ['a', 'b', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      "Choose a letter please: u\n",
       "\n",
       "\t**\tincorrect\t**\n",
       "\n",
@@ -101,11 +109,11 @@
       "    \n",
       "\n",
       "you have these right so far:\n",
-      " ____d\n",
-      "failed letters:\t eajr\n",
+      " _____ed_e\n",
+      "failed letters:\t csru\n",
       "These letters are available:\n",
-      " ['b', 'c', 'f', 'g', 'h', 'i', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
-      "Choose a letter please: c\n",
+      " ['a', 'b', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 't', 'v', 'w', 'x', 'y', 'z']\n",
+      "Choose a letter please: f\n",
       "\n",
       "\t**\tincorrect\t**\n",
       "\n",
@@ -121,70 +129,79 @@
       "    \n",
       "\n",
       "you have these right so far:\n",
-      " ____d\n",
-      "failed letters:\t eajrc\n",
+      " _____ed_e\n",
+      "failed letters:\t csruf\n",
       "These letters are available:\n",
-      " ['b', 'f', 'g', 'h', 'i', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
-      "Choose a letter please: s\n",
+      " ['a', 'b', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 't', 'v', 'w', 'x', 'y', 'z']\n",
+      "Choose a letter please: g\n",
       "\n",
       "\t***\tcorrect\t***\n",
       "\n",
       "you have these right so far:\n",
-      " s___d\n",
-      "failed letters:\t eajrc\n",
+      " _____edge\n",
+      "failed letters:\t csruf\n",
       "These letters are available:\n",
-      " ['b', 'f', 'g', 'h', 'i', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      " ['a', 'b', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 't', 'v', 'w', 'x', 'y', 'z']\n",
+      "Choose a letter please: k\n",
+      "\n",
+      "\t***\tcorrect\t***\n",
+      "\n",
+      "you have these right so far:\n",
+      " k____edge\n",
+      "failed letters:\t csruf\n",
+      "These letters are available:\n",
+      " ['a', 'b', 'h', 'i', 'j', 'l', 'm', 'n', 'o', 'p', 'q', 't', 'v', 'w', 'x', 'y', 'z']\n",
+      "Choose a letter please: n\n",
+      "\n",
+      "\t***\tcorrect\t***\n",
+      "\n",
+      "you have these right so far:\n",
+      " kn___edge\n",
+      "failed letters:\t csruf\n",
+      "These letters are available:\n",
+      " ['a', 'b', 'h', 'i', 'j', 'l', 'm', 'o', 'p', 'q', 't', 'v', 'w', 'x', 'y', 'z']\n",
       "Choose a letter please: o\n",
       "\n",
       "\t***\tcorrect\t***\n",
       "\n",
       "you have these right so far:\n",
-      " so__d\n",
-      "failed letters:\t eajrc\n",
+      " kno__edge\n",
+      "failed letters:\t csruf\n",
       "These letters are available:\n",
-      " ['b', 'f', 'g', 'h', 'i', 'k', 'l', 'm', 'n', 'p', 'q', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      " ['a', 'b', 'h', 'i', 'j', 'l', 'm', 'p', 'q', 't', 'v', 'w', 'x', 'y', 'z']\n",
       "Choose a letter please: l\n",
       "\n",
-      "\t**\tincorrect\t**\n",
-      "\n",
-      "THE GIBBET GROWS:\n",
-      "\n",
-      "     ____\n",
-      "     |  |\n",
-      "     |  O\n",
-      "     | _|_  \n",
-      "     |\n",
-      "     |\n",
-      "    _|_\n",
-      "    \n",
+      "\t***\tcorrect\t***\n",
       "\n",
       "you have these right so far:\n",
-      " so__d\n",
-      "failed letters:\t eajrcl\n",
+      " kno_ledge\n",
+      "failed letters:\t csruf\n",
       "These letters are available:\n",
-      " ['b', 'f', 'g', 'h', 'i', 'k', 'm', 'n', 'p', 'q', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
-      "Choose a letter please: i\n",
+      " ['a', 'b', 'h', 'i', 'j', 'm', 'p', 'q', 't', 'v', 'w', 'x', 'y', 'z']\n",
+      "Choose a letter please: w\n",
       "\n",
-      "\t**\tincorrect\t**\n",
-      "\n",
-      "THE GIBBET GROWS:\n",
-      "\n",
-      "     ____\n",
-      "     |  |\n",
-      "     |  O\n",
-      "     | _|_  \n",
-      "     |  | \n",
-      "     | / \\\n",
-      "    _|_ \n",
-      "    \n",
-      "\n",
-      "    GAME OVER\n",
-      "    \n",
+      "\t***\tcorrect\t***\n",
       "\n",
       "you have these right so far:\n",
-      " so__d\n",
-      "failed letters:\t eajrcli\n",
-      "Word was: sound\n"
+      " knowledge\n",
+      "failed letters:\t csruf\n",
+      "\"\n",
+      "             In fact.. wait a minute... YOU WIN!!!#\n",
+      " \n",
+      "             Run Away!\n",
+      " \n",
+      "                   ____\n",
+      "                   |  |\n",
+      "                   |           _O_/\n",
+      "                   |          / |_            _________________\\\n",
+      "                   |          _/  |                            /\n",
+      "                  _|_ \n",
+      "  \n",
+      "  \n",
+      "  \n",
+      "  \n",
+      "              \n",
+      "Word was: knowledge\n"
      ]
     }
    ],
@@ -196,7 +213,7 @@
     "MIT license\n",
     "\n",
     "Games Dev Team\n",
-    "K-Rizzle, G-Masta and YrnBru \n",
+    "K-Rizzle, +1, +2\n",
     "\n",
     "\"\"\"\n",
     "\n",
@@ -330,19 +347,18 @@
     "\n",
     "#s.5 blocks\n",
     "\n",
-    "def intro():\n",
+    "def intro(word):\n",
     "    greeting()\n",
     "    gibbets     = get_gibbets()\n",
     "    chances     = len(gibbets)\n",
     "    print(\"\\nThere are\", chances, \"stages in the Hang Man drawing.\")\n",
-    "                \n",
-    "    words       = get_words()\n",
-    "    word        = random.choice(words)\n",
+    "    \n",
     "    letters     = len(word)\n",
     "    print(\"The Word has\", letters, \"letters.\")\n",
     "    \n",
     "    dummy_word  = \"_ \"*letters\n",
     "    print(\"Dummy word:\\t\", dummy_word, \"\\n\")\n",
+    "\n",
     "\n",
     "def game_loop(word):\n",
     "    alphabet     = get_alphabet()\n",
@@ -412,10 +428,11 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    \n",
-    "    intro()\n",
+    "   \n",
     "    \n",
     "    words       = get_words()\n",
     "    word        = random.choice(words)\n",
+    "    intro(word)\n",
     "    game_loop(word)\n",
     "    \n",
     "    print(\"Word was:\", word)\n",
@@ -424,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "structured-contributor",
    "metadata": {},
    "outputs": [
@@ -432,7 +449,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "e__e__e_\n",
       "build partial word handles e right\n",
       "build partial word handles e and h right\n",
       "build partial word handles ehfehveh right\n"
