--- a/hangman.ipynb
+++ b/hangman.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "alien-given",
    "metadata": {},
    "outputs": [
@@ -11,74 +11,113 @@
      "output_type": "stream",
      "text": [
       "\n",
+      "\u001b[34m\n",
       "Welcome to Hangman\n",
       "\n",
+      "\u001b[0m\n",
       "\n",
       "There are 8 stages in the Hang Man drawing.\n",
-      "The Word has 9 letters.\n",
-      "Dummy word:\t _ _ _ _ _ _ _ _ _  \n",
+      "The Word has 7 letters.\n",
+      "Dummy word:\t _ _ _ _ _ _ _  \n",
       "\n",
       "These letters are available:\n",
       " ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
       "Choose a letter please: e\n",
-      "\n",
-      "\t***\tcorrect\t***\n",
-      "\n",
-      "you have these right so far:\n",
-      " _____e__e\n",
-      "failed letters:\t \n",
-      "These letters are available:\n",
-      " ['a', 'b', 'c', 'd', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
-      "Choose a letter please: c\n",
-      "\n",
+      "\u001b[31m\n",
       "\t**\tincorrect\t**\n",
       "\n",
       "THE GIBBET GROWS:\n",
-      "\n",
+      "\u001b[33m\n",
       "    \n",
       "    \n",
       "    \n",
       "    _ _\n",
       "    \n",
+      "\u001b[0m\n",
+      "\u001b[0m\n",
       "\n",
       "you have these right so far:\n",
-      " _____e__e\n",
-      "failed letters:\t c\n",
+      " _______\n",
+      "failed letters:\t e\n",
       "These letters are available:\n",
-      " ['a', 'b', 'd', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
-      "Choose a letter please: d\n",
-      "\n",
+      " ['a', 'b', 'c', 'd', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      "Choose a letter please: a\n",
+      "\u001b[32m\n",
       "\t***\tcorrect\t***\n",
+      "\u001b[0m\n",
       "\n",
       "you have these right so far:\n",
-      " _____ed_e\n",
-      "failed letters:\t c\n",
+      " _a___a_\n",
+      "failed letters:\t e\n",
       "These letters are available:\n",
-      " ['a', 'b', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
-      "Choose a letter please: s\n",
+      " ['b', 'c', 'd', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      "Choose a letter please: p\n",
+      "\u001b[32m\n",
+      "\t***\tcorrect\t***\n",
+      "\u001b[0m\n",
       "\n",
+      "you have these right so far:\n",
+      " _ap__a_\n",
+      "failed letters:\t e\n",
+      "These letters are available:\n",
+      " ['b', 'c', 'd', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      "Choose a letter please: \n",
+      "default choice of 'j' for reusing letters\n",
+      "\u001b[31m\n",
       "\t**\tincorrect\t**\n",
       "\n",
       "THE GIBBET GROWS:\n",
-      "\n",
+      "\u001b[33m\n",
       "     |\n",
       "     |\n",
       "     |    \n",
       "     | \n",
       "    _|_\n",
       "    \n",
+      "\u001b[0m\n",
+      "\u001b[0m\n",
       "\n",
       "you have these right so far:\n",
-      " _____ed_e\n",
-      "failed letters:\t cs\n",
+      " _ap__a_\n",
+      "failed letters:\t ej\n",
       "These letters are available:\n",
-      " ['a', 'b', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
-      "Choose a letter please: r\n",
+      " ['b', 'c', 'd', 'f', 'g', 'h', 'i', 'k', 'l', 'm', 'n', 'o', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      "Choose a letter please: l\n",
+      "\u001b[32m\n",
+      "\t***\tcorrect\t***\n",
+      "\u001b[0m\n",
       "\n",
+      "you have these right so far:\n",
+      " _ap__al\n",
+      "failed letters:\t ej\n",
+      "These letters are available:\n",
+      " ['b', 'c', 'd', 'f', 'g', 'h', 'i', 'k', 'm', 'n', 'o', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      "Choose a letter please: c\n",
+      "\u001b[32m\n",
+      "\t***\tcorrect\t***\n",
+      "\u001b[0m\n",
+      "\n",
+      "you have these right so far:\n",
+      " cap__al\n",
+      "failed letters:\t ej\n",
+      "These letters are available:\n",
+      " ['b', 'd', 'f', 'g', 'h', 'i', 'k', 'm', 'n', 'o', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      "Choose a letter please: i\n",
+      "\u001b[32m\n",
+      "\t***\tcorrect\t***\n",
+      "\u001b[0m\n",
+      "\n",
+      "you have these right so far:\n",
+      " capi_al\n",
+      "failed letters:\t ej\n",
+      "These letters are available:\n",
+      " ['b', 'd', 'f', 'g', 'h', 'k', 'm', 'n', 'o', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      "Choose a letter please: q\n",
+      "\u001b[31m\n",
       "\t**\tincorrect\t**\n",
       "\n",
       "THE GIBBET GROWS:\n",
-      "\n",
+      "\u001b[33m\n",
       "     ____\n",
       "     |  |\n",
       "     |\n",
@@ -87,18 +126,20 @@
       "     | \n",
       "    _|_\n",
       "    \n",
+      "\u001b[0m\n",
+      "\u001b[0m\n",
       "\n",
       "you have these right so far:\n",
-      " _____ed_e\n",
-      "failed letters:\t csr\n",
+      " capi_al\n",
+      "failed letters:\t ejq\n",
       "These letters are available:\n",
-      " ['a', 'b', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
-      "Choose a letter please: u\n",
-      "\n",
+      " ['b', 'd', 'f', 'g', 'h', 'k', 'm', 'n', 'o', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      "Choose a letter please: z\n",
+      "\u001b[31m\n",
       "\t**\tincorrect\t**\n",
       "\n",
       "THE GIBBET GROWS:\n",
-      "\n",
+      "\u001b[33m\n",
       "     ____\n",
       "     |  |\n",
       "     |  O\n",
@@ -107,18 +148,20 @@
       "     |\n",
       "    _|_\n",
       "    \n",
+      "\u001b[0m\n",
+      "\u001b[0m\n",
       "\n",
       "you have these right so far:\n",
-      " _____ed_e\n",
-      "failed letters:\t csru\n",
+      " capi_al\n",
+      "failed letters:\t ejqz\n",
       "These letters are available:\n",
-      " ['a', 'b', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 't', 'v', 'w', 'x', 'y', 'z']\n",
-      "Choose a letter please: f\n",
-      "\n",
+      " ['b', 'd', 'f', 'g', 'h', 'k', 'm', 'n', 'o', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y']\n",
+      "Choose a letter please: n\n",
+      "\u001b[31m\n",
       "\t**\tincorrect\t**\n",
       "\n",
       "THE GIBBET GROWS:\n",
-      "\n",
+      "\u001b[33m\n",
       "     ____\n",
       "     |  |\n",
       "     |  O\n",
@@ -127,64 +170,44 @@
       "     |\n",
       "    _|_\n",
       "    \n",
+      "\u001b[0m\n",
+      "\u001b[0m\n",
       "\n",
       "you have these right so far:\n",
-      " _____ed_e\n",
-      "failed letters:\t csruf\n",
+      " capi_al\n",
+      "failed letters:\t ejqzn\n",
       "These letters are available:\n",
-      " ['a', 'b', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 't', 'v', 'w', 'x', 'y', 'z']\n",
-      "Choose a letter please: g\n",
+      " ['b', 'd', 'f', 'g', 'h', 'k', 'm', 'o', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y']\n",
+      "Choose a letter please: r\n",
+      "\u001b[31m\n",
+      "\t**\tincorrect\t**\n",
       "\n",
-      "\t***\tcorrect\t***\n",
+      "THE GIBBET GROWS:\n",
+      "\u001b[33m\n",
+      "     ____\n",
+      "     |  |\n",
+      "     |  O\n",
+      "     | _|_  \n",
+      "     |\n",
+      "     |\n",
+      "    _|_\n",
+      "    \n",
+      "\u001b[0m\n",
+      "\u001b[0m\n",
       "\n",
       "you have these right so far:\n",
-      " _____edge\n",
-      "failed letters:\t csruf\n",
+      " capi_al\n",
+      "failed letters:\t ejqznr\n",
       "These letters are available:\n",
-      " ['a', 'b', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 't', 'v', 'w', 'x', 'y', 'z']\n",
-      "Choose a letter please: k\n",
-      "\n",
+      " ['b', 'd', 'f', 'g', 'h', 'k', 'm', 'o', 's', 't', 'u', 'v', 'w', 'x', 'y']\n",
+      "Choose a letter please: t\n",
+      "\u001b[32m\n",
       "\t***\tcorrect\t***\n",
+      "\u001b[0m\n",
       "\n",
       "you have these right so far:\n",
-      " k____edge\n",
-      "failed letters:\t csruf\n",
-      "These letters are available:\n",
-      " ['a', 'b', 'h', 'i', 'j', 'l', 'm', 'n', 'o', 'p', 'q', 't', 'v', 'w', 'x', 'y', 'z']\n",
-      "Choose a letter please: n\n",
-      "\n",
-      "\t***\tcorrect\t***\n",
-      "\n",
-      "you have these right so far:\n",
-      " kn___edge\n",
-      "failed letters:\t csruf\n",
-      "These letters are available:\n",
-      " ['a', 'b', 'h', 'i', 'j', 'l', 'm', 'o', 'p', 'q', 't', 'v', 'w', 'x', 'y', 'z']\n",
-      "Choose a letter please: o\n",
-      "\n",
-      "\t***\tcorrect\t***\n",
-      "\n",
-      "you have these right so far:\n",
-      " kno__edge\n",
-      "failed letters:\t csruf\n",
-      "These letters are available:\n",
-      " ['a', 'b', 'h', 'i', 'j', 'l', 'm', 'p', 'q', 't', 'v', 'w', 'x', 'y', 'z']\n",
-      "Choose a letter please: l\n",
-      "\n",
-      "\t***\tcorrect\t***\n",
-      "\n",
-      "you have these right so far:\n",
-      " kno_ledge\n",
-      "failed letters:\t csruf\n",
-      "These letters are available:\n",
-      " ['a', 'b', 'h', 'i', 'j', 'm', 'p', 'q', 't', 'v', 'w', 'x', 'y', 'z']\n",
-      "Choose a letter please: w\n",
-      "\n",
-      "\t***\tcorrect\t***\n",
-      "\n",
-      "you have these right so far:\n",
-      " knowledge\n",
-      "failed letters:\t csruf\n",
+      " capital\n",
+      "failed letters:\t ejqznr\n",
       "\"\n",
       "             In fact.. wait a minute... YOU WIN!!!#\n",
       " \n",
@@ -201,7 +224,7 @@
       "  \n",
       "  \n",
       "              \n",
-      "Word was: knowledge\n"
+      "Word was: capital\n"
      ]
     }
    ],
@@ -219,6 +242,7 @@
     "\n",
     "# s.0 libraries\n",
     "\n",
+    "from colorama import Fore, Back, Style\n",
     "import random\n",
     "\n",
     "\n",
@@ -231,6 +255,7 @@
     "def get_words():\n",
     "    with open('words.txt') as the_opened_file:\n",
     "        words = the_opened_file.readlines()\n",
+    "        #print(\"words as they come out:\\n\", words)\n",
     "        words = [word[0:-1] for word in words]\n",
     "        words = [word for word in words if 4 < len(word) < 10]\n",
     "    return words\n",
@@ -328,11 +353,15 @@
     "\n",
     "\n",
     "def greeting():\n",
-    "    print(\"\\nWelcome to Hangman\\n\")\n",
+    "    print()\n",
+    "    print(Fore.BLUE + \"\\nWelcome to Hangman\\n\")\n",
+    "    print(Style.RESET_ALL)\n",
     "    \n",
     "def print_gibbet(wrong_so_far):\n",
     "    gibbets = get_gibbets()\n",
-    "    print(gibbets[wrong_so_far])\n",
+    "    print(Fore.YELLOW + gibbets[wrong_so_far])\n",
+    "    print(Style.RESET_ALL)\n",
+    "\n",
     "\n",
     "#s.4 control\n",
     "\n",
@@ -344,6 +373,7 @@
     "    else:\n",
     "        print(\"default choice of \\'j\\' for reusing letters\")\n",
     "        return 'j'\n",
+    "\n",
     "\n",
     "#s.5 blocks\n",
     "\n",
@@ -386,15 +416,18 @@
     "            letter = invite_letter(available)\n",
     "\n",
     "            if letter in word:\n",
-    "                print(\"\\n\\t***\\tcorrect\\t***\")\n",
+    "                print(Fore.GREEN + \"\\n\\t***\\tcorrect\\t***\")\n",
+    "                print(Style.RESET_ALL)\n",
     "                right_so_far.append(letter)\n",
     "\n",
     "            else:\n",
-    "                print(\"\\n\\t**\\tincorrect\\t**\")\n",
     "                wrong_so_far = wrong_so_far + 1\n",
     "                failed_letters += letter\n",
+    "                print(Fore.RED + \"\\n\\t**\\tincorrect\\t**\")\n",
+    "                right_so_far.append(letter)\n",
     "                print(\"\\nTHE GIBBET GROWS:\")\n",
     "                print_gibbet(wrong_so_far)\n",
+    "                print(Style.RESET_ALL)\n",
     "                \n",
     "            if len(right_so_far) > 0 or len(failed_letters) > 0:\n",
     "                partial_word = build_partial_word(right_so_far, word)        \n",
@@ -429,9 +462,9 @@
     "if __name__ == \"__main__\":\n",
     "    \n",
     "   \n",
-    "    \n",
     "    words       = get_words()\n",
     "    word        = random.choice(words)\n",
+    "    \n",
     "    intro(word)\n",
     "    game_loop(word)\n",
     "    \n",
@@ -441,20 +474,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "structured-contributor",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "build partial word handles e right\n",
-      "build partial word handles e and h right\n",
-      "build partial word handles ehfehveh right\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -493,8 +516,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "nutritional-interface",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33msome brown text\n",
+      "\u001b[0m\n",
+      "back to normal now\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(Fore.YELLOW + 'some brown text')\n",
+    "print(Style.RESET_ALL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "strategic-footwear",
    "metadata": {},
    "outputs": [],
    "source": []
